# petsc-dev-env

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  LICENSE  README.md  makefile
.cache/clangd/index/: foo.cc.F2BDCEE79DEC500B.idx  foo.h.BF985E67558ED789.idx  main.cc.0CA9F71DC8B3A36F.idx  main.cc.9AF930E24657DF73.idx  test_foo.cc.AC42AD77EF02B497.idx  test_main.cc.7B736A48EFC46ACA.idx
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
include/: foo.h
src/: foo.cc  foo.h
src/apps/: main.cc
tests/: foo_test.cc  test_foo.cc  test_main.cc
